--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Writing Implements Manager</h1>
 
-    <h2> The list includes 3 default items, including a fountain pen, pencil and flair marker<h2>
+    <h2> The initial list includes 3 default items, including a </h2> 
+    <h2> pencil, micron and flair marker<h2>
 
    
     <script src="menuapp.js"></script>
